--- a/FruitKha_Main/cart.Master
+++ b/FruitKha_Main/cart.Master
@@ -192,15 +192,15 @@
 							</tbody>
 						</table>
 						<div class="cart-buttons">
-							<a href="cart.html" class="boxed-btn">Update Cart</a>
-							<a href="checkout.html" class="boxed-btn black">Check Out</a>
+							<a href="cart.aspx" class="boxed-btn">Update Cart</a>
+							<a href="checkout.aspx" class="boxed-btn black">Check Out</a>
 						</div>
 					</div>
 
 					<%--<div class="coupon-section">
 						<h3>Apply Coupon</h3>
 						<div class="coupon-form-wrap">
-							<form action="index.html">
+							<form action="index.aspx">
 								<p><input type="text" placeholder="Coupon"></p>
 								<p><input type="submit" value="Apply"></p>
 							</form>
@@ -278,7 +278,7 @@
 					<div class="footer-box subscribe">
 						<h2 class="widget-title">Subscribe</h2>
 						<p>Subscribe to our mailing list to get the latest updates.</p>
-						<form action="index.html">
+						<form action="index.aspx">
 							<input type="email" placeholder="Email">
 							<button type="submit"><i class="fas fa-paper-plane"></i></button>
 						</form>
