--- a/FruitKha_Main/assets/css/main.css
+++ b/FruitKha_Main/assets/css/main.css
@@ -1237,6 +1237,8 @@ div.owl-controls div.owl-nav div:hover {
   transition: 0.3s;
 }
 
+
+
 .product-image img:hover {
   -webkit-box-shadow: none;
   box-shadow: none;
@@ -2639,9 +2641,14 @@ td.product-image img {
   color: #051922;
 }
 
-thead.cart-table-head tr {
-  background-color: #efefef;
+thead.cart-table-head tr th{
+    border-right: 1px solid #efefef;
+    padding: 15px;
+    font-weight: 500;
+    text-align: center;
+    background-color: #efefef;
 }
+
 
 td.product-quantity input {
   margin-bottom: 0;
