--- a/FruitKha_Main/assets/css/scss/common/_common.scss
+++ b/FruitKha_Main/assets/css/scss/common/_common.scss
@@ -1,6 +1,6 @@
 /* -----------------------------------------------------------------------------
 
-# All Common Styles
+# All Common Styles by Hardik Dharaiya
 
 ----------------------------------------------------------------------------- */
 //Preload
