--- a/FruitKha_Main/assets/css/scss/common/_footer.scss
+++ b/FruitKha_Main/assets/css/scss/common/_footer.scss
@@ -1,6 +1,6 @@
 /* -----------------------------------------------------------------------------
 
-# Footer Styles
+# Footer Styles by Hardik Dharaiya
 
 ----------------------------------------------------------------------------- */
 .single-logo-item img {
