--- a/FruitKha_Main/assets/css/scss/common/_header.scss
+++ b/FruitKha_Main/assets/css/scss/common/_header.scss
@@ -1,6 +1,6 @@
 /* -----------------------------------------------------------------------------
 
-# Header Styles
+# Header Styles by Hardik Dharaiya
 
 ----------------------------------------------------------------------------- */
 ul.navbar-nav li.nav-item {
