--- a/FruitKha_Main/assets/css/scss/common/_hover.scss
+++ b/FruitKha_Main/assets/css/scss/common/_hover.scss
@@ -1,6 +1,6 @@
 /* -----------------------------------------------------------------------------
 
-# Hover Styles
+# Hover Styles by Hardik Dharaiya
 
 ----------------------------------------------------------------------------- */
 a {
