--- a/FruitKha_Main/assets/css/scss/pages/_shop.scss
+++ b/FruitKha_Main/assets/css/scss/pages/_shop.scss
@@ -1,6 +1,6 @@
 /* -----------------------------------------------------------------------------
 
-# Shop Page Styles
+# Shop Page Styles by Dharaiya Hardik
 
 ----------------------------------------------------------------------------- */
 .product-filters {
