--- a/FruitKha_Main/assets/css/scss/sections/_about.scss
+++ b/FruitKha_Main/assets/css/scss/sections/_about.scss
@@ -1,6 +1,6 @@
 /* -----------------------------------------------------------------------------
 
-# About Styles
+# About Styles by Hardik Dharaiya
 
 ----------------------------------------------------------------------------- */
 a.video-play-btn {
