--- a/FruitKha_Main/assets/css/scss/sections/_cart-banner.scss
+++ b/FruitKha_Main/assets/css/scss/sections/_cart-banner.scss
@@ -1,6 +1,6 @@
 /* -----------------------------------------------------------------------------
 
-# Cart Banner Styles
+# Cart Banner Styles by Hardik Dharaiya
 
 ----------------------------------------------------------------------------- */
 .cart-banner {
