--- a/FruitKha_Main/assets/css/scss/sections/_hero.scss
+++ b/FruitKha_Main/assets/css/scss/sections/_hero.scss
@@ -1,6 +1,6 @@
 /* -----------------------------------------------------------------------------
 
-# Hero Styles
+# Hero Styles by Hardik Dharaiya
 
 ----------------------------------------------------------------------------- */
 .hero-bg {
