--- a/FruitKha_Main/assets/css/scss/sections/_list.scss
+++ b/FruitKha_Main/assets/css/scss/sections/_list.scss
@@ -1,6 +1,6 @@
 /* -----------------------------------------------------------------------------
 
-# List Styles
+# List Styles by Hardik Dharaiya
 
 ----------------------------------------------------------------------------- */
 .list-section {
