--- a/FruitKha_Main/assets/css/scss/sections/_news.scss
+++ b/FruitKha_Main/assets/css/scss/sections/_news.scss
@@ -1,6 +1,6 @@
 /* -----------------------------------------------------------------------------
 
-# News Styles
+# News Styles by Hardik Dharaiya
 
 ----------------------------------------------------------------------------- */
 .news-bg-1 {
