--- a/FruitKha_Main/assets/css/scss/sections/_shop-banner.scss
+++ b/FruitKha_Main/assets/css/scss/sections/_shop-banner.scss
@@ -1,6 +1,6 @@
 /* -----------------------------------------------------------------------------
 
-# Shop Banner Styles
+# Shop Banner Styles by Hardik Dharaiya
 
 ----------------------------------------------------------------------------- */
 .shop-banner {
