--- a/FruitKha_Main/assets/css/scss/sections/_testimonials.scss
+++ b/FruitKha_Main/assets/css/scss/sections/_testimonials.scss
@@ -1,6 +1,6 @@
 /* -----------------------------------------------------------------------------
 
-# Testimonial Styles
+# Testimonial Styles by Hardik Dharaiya
 
 ----------------------------------------------------------------------------- */
 .client-avater {
